# thermoanalysis

./: .coveragerc  .gitignore  README.md  flake.nix  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_and_publish.yml  pythonapp.yml
nicevibes/: QCData.py  Thermo.py  constants.py  main.py
nicevibes/tests/: playground.py  test_thermochemistry.py
nicevibes/tests/logs/: 05_dmso_hf_orca_freq.out
nix/: overlay.nix  thermoanalysis.nix
thermoanalysis/: QCData.py  config.py  constants.py  main.py  parser.py  thermo.py
thermoanalysis/tests/: conftest.py  playground.py  test_parser.py  test_part_funcs.py  test_thermochemistry.py
thermoanalysis/tests/logs/: 01_alkin_000.007.orca.out  03_anthracene_freq.hess  06_benzaldehyde_b973c_orca_gas.out  dmso_641_xtbout.json  gas_000.017.orca.out  high_high_000.010.orca.out  irc_000.024.orca.out  irc_000.063.orca.out  irc_000.084.orca.out  orca_hf_321g_hcn_iso_ts.out
