[metadata]
name = thermoanalysis
description = Python library for evaluating thermochemical corrections from quantum chemical data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eljost/thermoanalysis
maintainer = Johannes Steinmetzer
maintainer_email = johannes.steinmetzer@uni-jena.de
license = GNU General Public License v3 (GPLv3)
platform = unix
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    cclib
    numpy
    h5py
    pandas
    pytest
    tabulate

[options.extras_require]
test = pytest; pytest-cov

[options.entry_points]
console_scripts =
    thermo = thermoanalysis.main:run
